# tktable

./: .gitignore  .travis.yml  README.md  automate.sh  docs.html  pyproject.toml  run.sh  setup.py  tktable.py  travis.sh
docs/: tktable.m.html
examples/: example1.py
tktable/: __init__.py  array_var.py  table.py  utils.py
